Remove scroll end, spacing bug

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,12 @@ body {
     clip-path: polygon(0 0, 100% 70%, 100% 100%, 0% 100%);
 }
 
+@media (max-width: 768px) {
+    .clip-slant-right {
+        clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+    }
+}
+
 .button {
     @apply select-none inline-flex justify-center py-2 px-8 border border-transparent rounded-md text-base font-bold transition;
 }
